[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["PL", "E", "F", "W", "I", "RUF", "N"]
