[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]


[project.scripts]
aoc2024 = "aoc2024.scripts.aoc:main"

[tool.ruff]
line-length = 90
exclude = ["*/templates/*.py", "tests/*.py"]

[tool.ruff.lint]
select = ["PL", "E", "F", "W", "I", "RUF", "N"]

